// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TypeaheadMenu> CustomChildren story renders snapshot 1`] = `
<div
  style="min-height: 300px;"
>
  <div
    style="position: relative;"
  >
    <div
      aria-label="menu-options"
      class="rbt-menu dropdown-menu show"
      id="typeahead-menu"
      role="listbox"
      style="display: block; max-height: 300px; overflow: auto;"
    >
      <a
        aria-label="Alabama"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-0"
        role="option"
      >
        <div>
          Alabama
        </div>
        <div>
          <small>
            Population: 
            4780127
          </small>
        </div>
      </a>
      <a
        aria-label="Alaska"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-1"
        role="option"
      >
        <div>
          Alaska
        </div>
        <div>
          <small>
            Population: 
            710249
          </small>
        </div>
      </a>
      <a
        aria-label="Arizona"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-2"
        role="option"
      >
        <div>
          Arizona
        </div>
        <div>
          <small>
            Population: 
            6392307
          </small>
        </div>
      </a>
      <a
        aria-label="Arkansas"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-3"
        role="option"
      >
        <div>
          Arkansas
        </div>
        <div>
          <small>
            Population: 
            2915958
          </small>
        </div>
      </a>
      <a
        aria-label="California"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-4"
        role="option"
      >
        <div>
          California
        </div>
        <div>
          <small>
            Population: 
            37254503
          </small>
        </div>
      </a>
      <a
        aria-label="Colorado"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-5"
        role="option"
      >
        <div>
          Colorado
        </div>
        <div>
          <small>
            Population: 
            5029324
          </small>
        </div>
      </a>
      <a
        aria-label="Connecticut"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-6"
        role="option"
      >
        <div>
          Connecticut
        </div>
        <div>
          <small>
            Population: 
            3574118
          </small>
        </div>
      </a>
      <a
        aria-label="Delaware"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-7"
        role="option"
      >
        <div>
          Delaware
        </div>
        <div>
          <small>
            Population: 
            897936
          </small>
        </div>
      </a>
      <a
        aria-label="Florida"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-8"
        role="option"
      >
        <div>
          Florida
        </div>
        <div>
          <small>
            Population: 
            18804623
          </small>
        </div>
      </a>
      <a
        aria-label="Georgia"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-9"
        role="option"
      >
        <div>
          Georgia
        </div>
        <div>
          <small>
            Population: 
            9688681
          </small>
        </div>
      </a>
      <a
        aria-label="Hawaii"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-10"
        role="option"
      >
        <div>
          Hawaii
        </div>
        <div>
          <small>
            Population: 
            1360301
          </small>
        </div>
      </a>
      <a
        aria-label="Idaho"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-11"
        role="option"
      >
        <div>
          Idaho
        </div>
        <div>
          <small>
            Population: 
            1567652
          </small>
        </div>
      </a>
      <a
        aria-label="Illinois"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-12"
        role="option"
      >
        <div>
          Illinois
        </div>
        <div>
          <small>
            Population: 
            12831549
          </small>
        </div>
      </a>
      <a
        aria-label="Indiana"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-13"
        role="option"
      >
        <div>
          Indiana
        </div>
        <div>
          <small>
            Population: 
            6484229
          </small>
        </div>
      </a>
      <a
        aria-label="Iowa"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-14"
        role="option"
      >
        <div>
          Iowa
        </div>
        <div>
          <small>
            Population: 
            3046869
          </small>
        </div>
      </a>
      <a
        aria-label="Kansas"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-15"
        role="option"
      >
        <div>
          Kansas
        </div>
        <div>
          <small>
            Population: 
            2853132
          </small>
        </div>
      </a>
      <a
        aria-label="Kentucky"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-16"
        role="option"
      >
        <div>
          Kentucky
        </div>
        <div>
          <small>
            Population: 
            4339349
          </small>
        </div>
      </a>
      <a
        aria-label="Louisiana"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-17"
        role="option"
      >
        <div>
          Louisiana
        </div>
        <div>
          <small>
            Population: 
            4533479
          </small>
        </div>
      </a>
      <a
        aria-label="Maine"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-18"
        role="option"
      >
        <div>
          Maine
        </div>
        <div>
          <small>
            Population: 
            1328361
          </small>
        </div>
      </a>
      <a
        aria-label="Maryland"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-19"
        role="option"
      >
        <div>
          Maryland
        </div>
        <div>
          <small>
            Population: 
            5773785
          </small>
        </div>
      </a>
      <a
        aria-label="Massachusetts"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-20"
        role="option"
      >
        <div>
          Massachusetts
        </div>
        <div>
          <small>
            Population: 
            6547817
          </small>
        </div>
      </a>
      <a
        aria-label="Michigan"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-21"
        role="option"
      >
        <div>
          Michigan
        </div>
        <div>
          <small>
            Population: 
            9884129
          </small>
        </div>
      </a>
      <a
        aria-label="Minnesota"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-22"
        role="option"
      >
        <div>
          Minnesota
        </div>
        <div>
          <small>
            Population: 
            5303925
          </small>
        </div>
      </a>
      <a
        aria-label="Mississippi"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-23"
        role="option"
      >
        <div>
          Mississippi
        </div>
        <div>
          <small>
            Population: 
            2968103
          </small>
        </div>
      </a>
      <a
        aria-label="Missouri"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-24"
        role="option"
      >
        <div>
          Missouri
        </div>
        <div>
          <small>
            Population: 
            5988927
          </small>
        </div>
      </a>
      <a
        aria-label="Montana"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-25"
        role="option"
      >
        <div>
          Montana
        </div>
        <div>
          <small>
            Population: 
            989417
          </small>
        </div>
      </a>
      <a
        aria-label="Nebraska"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-26"
        role="option"
      >
        <div>
          Nebraska
        </div>
        <div>
          <small>
            Population: 
            1826341
          </small>
        </div>
      </a>
      <a
        aria-label="Nevada"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-27"
        role="option"
      >
        <div>
          Nevada
        </div>
        <div>
          <small>
            Population: 
            2700691
          </small>
        </div>
      </a>
      <a
        aria-label="New Hampshire"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-28"
        role="option"
      >
        <div>
          New Hampshire
        </div>
        <div>
          <small>
            Population: 
            1316466
          </small>
        </div>
      </a>
      <a
        aria-label="New Jersey"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-29"
        role="option"
      >
        <div>
          New Jersey
        </div>
        <div>
          <small>
            Population: 
            8791936
          </small>
        </div>
      </a>
      <a
        aria-label="New Mexico"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-30"
        role="option"
      >
        <div>
          New Mexico
        </div>
        <div>
          <small>
            Population: 
            2059192
          </small>
        </div>
      </a>
      <a
        aria-label="New York"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-31"
        role="option"
      >
        <div>
          New York
        </div>
        <div>
          <small>
            Population: 
            19378087
          </small>
        </div>
      </a>
      <a
        aria-label="North Carolina"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-32"
        role="option"
      >
        <div>
          North Carolina
        </div>
        <div>
          <small>
            Population: 
            9535692
          </small>
        </div>
      </a>
      <a
        aria-label="North Dakota"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-33"
        role="option"
      >
        <div>
          North Dakota
        </div>
        <div>
          <small>
            Population: 
            672591
          </small>
        </div>
      </a>
      <a
        aria-label="Ohio"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-34"
        role="option"
      >
        <div>
          Ohio
        </div>
        <div>
          <small>
            Population: 
            11536725
          </small>
        </div>
      </a>
      <a
        aria-label="Oklahoma"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-35"
        role="option"
      >
        <div>
          Oklahoma
        </div>
        <div>
          <small>
            Population: 
            3751616
          </small>
        </div>
      </a>
      <a
        aria-label="Oregon"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-36"
        role="option"
      >
        <div>
          Oregon
        </div>
        <div>
          <small>
            Population: 
            3831073
          </small>
        </div>
      </a>
      <a
        aria-label="Pennsylvania"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-37"
        role="option"
      >
        <div>
          Pennsylvania
        </div>
        <div>
          <small>
            Population: 
            12702887
          </small>
        </div>
      </a>
      <a
        aria-label="Rhode Island"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-38"
        role="option"
      >
        <div>
          Rhode Island
        </div>
        <div>
          <small>
            Population: 
            1052931
          </small>
        </div>
      </a>
      <a
        aria-label="South Carolina"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-39"
        role="option"
      >
        <div>
          South Carolina
        </div>
        <div>
          <small>
            Population: 
            4625401
          </small>
        </div>
      </a>
      <a
        aria-label="South Dakota"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-40"
        role="option"
      >
        <div>
          South Dakota
        </div>
        <div>
          <small>
            Population: 
            814191
          </small>
        </div>
      </a>
      <a
        aria-label="Tennessee"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-41"
        role="option"
      >
        <div>
          Tennessee
        </div>
        <div>
          <small>
            Population: 
            6346275
          </small>
        </div>
      </a>
      <a
        aria-label="Texas"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-42"
        role="option"
      >
        <div>
          Texas
        </div>
        <div>
          <small>
            Population: 
            25146105
          </small>
        </div>
      </a>
      <a
        aria-label="Utah"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-43"
        role="option"
      >
        <div>
          Utah
        </div>
        <div>
          <small>
            Population: 
            2763888
          </small>
        </div>
      </a>
      <a
        aria-label="Vermont"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-44"
        role="option"
      >
        <div>
          Vermont
        </div>
        <div>
          <small>
            Population: 
            625745
          </small>
        </div>
      </a>
      <a
        aria-label="Virginia"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-45"
        role="option"
      >
        <div>
          Virginia
        </div>
        <div>
          <small>
            Population: 
            8001045
          </small>
        </div>
      </a>
      <a
        aria-label="Washington"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-46"
        role="option"
      >
        <div>
          Washington
        </div>
        <div>
          <small>
            Population: 
            6724543
          </small>
        </div>
      </a>
      <a
        aria-label="West Virginia"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-47"
        role="option"
      >
        <div>
          West Virginia
        </div>
        <div>
          <small>
            Population: 
            1853011
          </small>
        </div>
      </a>
      <a
        aria-label="Wisconsin"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-48"
        role="option"
      >
        <div>
          Wisconsin
        </div>
        <div>
          <small>
            Population: 
            5687289
          </small>
        </div>
      </a>
      <a
        aria-label="Wyoming"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-49"
        role="option"
      >
        <div>
          Wyoming
        </div>
        <div>
          <small>
            Population: 
            563767
          </small>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`<TypeaheadMenu> CustomOption story renders snapshot 1`] = `
<div
  style="min-height: 300px;"
>
  <div
    style="position: relative;"
  >
    <div
      aria-label="menu-options"
      class="rbt-menu dropdown-menu show"
      id="typeahead-menu"
      role="listbox"
      style="display: block; max-height: 300px; overflow: auto;"
    >
      <a
        aria-label="custom option"
        aria-selected="false"
        class="dropdown-item rbt-menu-custom-option"
        href="#"
        id="-item-0"
        role="option"
      >
        New selection: 
        <mark
          class="rbt-highlight-text"
        >
          custom option
        </mark>
      </a>
    </div>
  </div>
</div>
`;

exports[`<TypeaheadMenu> Default story renders snapshot 1`] = `
<div
  style="min-height: 300px;"
>
  <div
    style="position: relative;"
  >
    <div
      aria-label="menu-options"
      class="rbt-menu dropdown-menu show"
      id="typeahead-menu"
      role="listbox"
      style="display: block; max-height: 300px; overflow: auto;"
    >
      <a
        aria-label="Alabama"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-0"
        role="option"
      >
        Alabama
      </a>
      <a
        aria-label="Alaska"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-1"
        role="option"
      >
        Alaska
      </a>
      <a
        aria-label="Arizona"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-2"
        role="option"
      >
        Arizona
      </a>
      <a
        aria-label="Arkansas"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-3"
        role="option"
      >
        Arkansas
      </a>
      <a
        aria-label="California"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-4"
        role="option"
      >
        California
      </a>
      <a
        aria-label="Colorado"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-5"
        role="option"
      >
        Colorado
      </a>
      <a
        aria-label="Connecticut"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-6"
        role="option"
      >
        Connecticut
      </a>
      <a
        aria-label="Delaware"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-7"
        role="option"
      >
        Delaware
      </a>
      <a
        aria-label="Florida"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-8"
        role="option"
      >
        Florida
      </a>
      <a
        aria-label="Georgia"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-9"
        role="option"
      >
        Georgia
      </a>
      <a
        aria-label="Hawaii"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-10"
        role="option"
      >
        Hawaii
      </a>
      <a
        aria-label="Idaho"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-11"
        role="option"
      >
        Idaho
      </a>
      <a
        aria-label="Illinois"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-12"
        role="option"
      >
        Illinois
      </a>
      <a
        aria-label="Indiana"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-13"
        role="option"
      >
        Indiana
      </a>
      <a
        aria-label="Iowa"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-14"
        role="option"
      >
        Iowa
      </a>
      <a
        aria-label="Kansas"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-15"
        role="option"
      >
        Kansas
      </a>
      <a
        aria-label="Kentucky"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-16"
        role="option"
      >
        Kentucky
      </a>
      <a
        aria-label="Louisiana"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-17"
        role="option"
      >
        Louisiana
      </a>
      <a
        aria-label="Maine"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-18"
        role="option"
      >
        Maine
      </a>
      <a
        aria-label="Maryland"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-19"
        role="option"
      >
        Maryland
      </a>
      <a
        aria-label="Massachusetts"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-20"
        role="option"
      >
        Massachusetts
      </a>
      <a
        aria-label="Michigan"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-21"
        role="option"
      >
        Michigan
      </a>
      <a
        aria-label="Minnesota"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-22"
        role="option"
      >
        Minnesota
      </a>
      <a
        aria-label="Mississippi"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-23"
        role="option"
      >
        Mississippi
      </a>
      <a
        aria-label="Missouri"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-24"
        role="option"
      >
        Missouri
      </a>
      <a
        aria-label="Montana"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-25"
        role="option"
      >
        Montana
      </a>
      <a
        aria-label="Nebraska"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-26"
        role="option"
      >
        Nebraska
      </a>
      <a
        aria-label="Nevada"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-27"
        role="option"
      >
        Nevada
      </a>
      <a
        aria-label="New Hampshire"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-28"
        role="option"
      >
        New Hampshire
      </a>
      <a
        aria-label="New Jersey"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-29"
        role="option"
      >
        New Jersey
      </a>
      <a
        aria-label="New Mexico"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-30"
        role="option"
      >
        New Mexico
      </a>
      <a
        aria-label="New York"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-31"
        role="option"
      >
        New York
      </a>
      <a
        aria-label="North Carolina"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-32"
        role="option"
      >
        North Carolina
      </a>
      <a
        aria-label="North Dakota"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-33"
        role="option"
      >
        North Dakota
      </a>
      <a
        aria-label="Ohio"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-34"
        role="option"
      >
        Ohio
      </a>
      <a
        aria-label="Oklahoma"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-35"
        role="option"
      >
        Oklahoma
      </a>
      <a
        aria-label="Oregon"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-36"
        role="option"
      >
        Oregon
      </a>
      <a
        aria-label="Pennsylvania"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-37"
        role="option"
      >
        Pennsylvania
      </a>
      <a
        aria-label="Rhode Island"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-38"
        role="option"
      >
        Rhode Island
      </a>
      <a
        aria-label="South Carolina"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-39"
        role="option"
      >
        South Carolina
      </a>
      <a
        aria-label="South Dakota"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-40"
        role="option"
      >
        South Dakota
      </a>
      <a
        aria-label="Tennessee"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-41"
        role="option"
      >
        Tennessee
      </a>
      <a
        aria-label="Texas"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-42"
        role="option"
      >
        Texas
      </a>
      <a
        aria-label="Utah"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-43"
        role="option"
      >
        Utah
      </a>
      <a
        aria-label="Vermont"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-44"
        role="option"
      >
        Vermont
      </a>
      <a
        aria-label="Virginia"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-45"
        role="option"
      >
        Virginia
      </a>
      <a
        aria-label="Washington"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-46"
        role="option"
      >
        Washington
      </a>
      <a
        aria-label="West Virginia"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-47"
        role="option"
      >
        West Virginia
      </a>
      <a
        aria-label="Wisconsin"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-48"
        role="option"
      >
        Wisconsin
      </a>
      <a
        aria-label="Wyoming"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-49"
        role="option"
      >
        Wyoming
      </a>
    </div>
  </div>
</div>
`;

exports[`<TypeaheadMenu> Pagination story renders snapshot 1`] = `
<div
  style="min-height: 300px;"
>
  <div
    style="position: relative;"
  >
    <div
      aria-label="menu-options"
      class="rbt-menu dropdown-menu show"
      id="typeahead-menu"
      role="listbox"
      style="display: block; max-height: 300px; overflow: auto;"
    >
      <a
        aria-label="Alabama"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-0"
        role="option"
      >
        Alabama
      </a>
      <a
        aria-label="Alaska"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-1"
        role="option"
      >
        Alaska
      </a>
      <a
        aria-label="Arizona"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-2"
        role="option"
      >
        Arizona
      </a>
      <a
        aria-label="Arkansas"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-3"
        role="option"
      >
        Arkansas
      </a>
      <a
        aria-label="California"
        aria-selected="false"
        class="dropdown-item"
        href="#"
        id="-item-4"
        role="option"
      >
        California
      </a>
      <div
        class="dropdown-divider"
        role="separator"
      />
      <a
        aria-label="Display additional results..."
        aria-selected="false"
        class="dropdown-item rbt-menu-pagination-option"
        href="#"
        id="-item-5"
        role="option"
      >
        Display additional results...
      </a>
    </div>
  </div>
</div>
`;
